# rs_lib

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: rust.yml
tests/: lib_test.rs
