[package]
name = "rs_lib"
version = "0.1.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "A template for creating Rust libraries."
license = "Apache-2.0"
repository = "https://github.com/DenuxPlays/rs_lib"
homepage = "https://github.com/DenuxPlays/rs_lib"
documentation = "https://docs.rs/rs_lib"
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
